ingress-study/labs/ingress-lab-06-tls-ca-chain/manifests/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ca-chain-web
  namespace: tls-lab-10
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ca-chain-web
  template:
    metadata:
      labels:
        app: ca-chain-web
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          command:
            - /bin/sh
            - -c
          args:
            - |
              echo "ca chain pod: $HOSTNAME" > /usr/share/nginx/html/index.html
              nginx -g 'daemon off;'
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
