ingress-study/labs/ingress-lab-06-tls-ca-chain/manifests/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ca-chain-ingress
  namespace: tls-lab-10
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ca-chain.local
      secretName: ca-chain-tls
  rules:
    - host: ca-chain.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ca-chain-service
                port:
                  number: 80
